# telebot-send

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  example.config.py  sendtg.py  setup.py
sendtg/: bot.py
sendtg/utils/: logger.py
src/: args.rs  config.rs  logger.rs  main.rs  telegram.rs  utils.rs
utils/: logger.py
